syntax = "proto3";

option go_package = "/protoc";

import "memory_message.proto";

message CPU {
  string brand = 1;
  string name = 2;
  uint32 num_cores = 3;
  uint32 num_threads = 4;
  double min_ghz = 5;
  double max_ghz = 6;
}

message GPU {
  string brand = 1;
  string name = 2;
  double min_ghz = 3;
  double max_ghz = 4;
  Memory memory = 5;
}
